crates/soul-attributes/tests/ui/missing_id.stderr
error: soul attribute requires `id = "..."`
 --> tests/ui/missing_id.rs:3:8
  |
3 | #[soul(role = "backend")]
  |        ^^^^^^^^^^^^^^^^
