crates/soul-attributes/tests/ui/missing_id.rs
use soul_attributes::soul;

#[soul(role = "backend")]
fn annotated() {}

fn main() {}
